fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+html {
+  height: 100%;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  overflow-y: scroll !important;
+  width: 100% !important;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -28,6 +41,14 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+}
+
+body::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* Optional: Add if you want to keep the space where the scrollbar used to be */
 }
 
 h1 {
@@ -66,3 +87,6 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+
